Added css && changed title && deleted non-used files

--- a/index.html
+++ b/index.html
@@ -7,63 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>JS TEST</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            padding-top: 50px;
-        }
-        .container {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-        .btn {
-            margin: 5px 0;
-            font-size: 15px;
-            padding: 5px 5px;
-            background-color: transparent;
-            border: 1px solid #000;
-            user-select: none;
-            cursor: pointer;
-        }
-        .mixers {
-            width: 250px;
-            height: 220px;
-            border: 1px solid #000;
-            border-radius: 5px;
-        }
-        .mixer {
-            width: 100px;
-            height: 100px;
-            line-height: 100px;
-            text-align: center;
-            border: 1px solid #000;
-            border-radius: 50%;
-        }
-        .elementCard {
-            padding: 0;
-            width: 60px;
-            height: 60px;
-            line-height: 60px;
-            text-align: center;
-            border-radius: 3px;
-        }
-        .buttons {
-            text-align: center;
-        }
-    </style>
+    <title>Alchemy game</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="panel">
-
-        </div>
+        <div class="panel"></div>
         <div class="mixers container">
                 <div class="dropCircles">
                     <div class="mixer"></div>
